# takabe

./: .gitignore  Cargo.toml
src/: http.rs  main.rs
src/migrations/: 0001-create-tables.sql
templates/: base.html  index.html  not-found.html  success.html  unauthorised.html
